--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -3,15 +3,16 @@
 
 = Introduction =
 
-Obviously the WoW Model Viewer will never be perfect. This page is a list of items we have to add, fix, or remove from the program in order to make it better. The list is in order of most desired/useful to least.
+Obviously the WoW Model Viewer will never be perfect. This page is a list of items we have to add, fix, or remove from the program (other than building upon the core itself) in order to make it better. The list is in order of most desired/useful to least.
 
-= Top 5 =
+= Main Additions =
 The top five additions to the WoW Model Viewer are:<p>
 1. Support for a broader range of video and image formats for importing.<p>
 2. Support for 3D Studio Max and Lightwave 3D exports.<p>
 3. Animation sequences.<p>
 4. Spellcasting effects (Both spell and animation!).<p>
 5. Multiple on-screen characters.<p>
+6. Alpha channels for exports.<p>
 
 = Other =
 We may also be able to add:<p>
