--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -1,5 +1,6 @@
 #summary A list of additions to the WoW Model Viewer.
 #labels Phase-Requirements,Phase-Support
+<a href="http://code.google.com/p/wowmodelviewer/wiki/">Home</a> || <a href="http://code.google.com/p/wowmodelviewer/wiki/">To Do</a> || <a href="http://code.google.com/p/wowmodelviewer/wiki/Changelog">Changelog</a>
 
 = Introduction =
 
