--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -1,13 +1,10 @@
 #summary WoW Model Viewer Project.
-
+< <a href="http://code.google.com/p/wowmodelviewer/wiki/Home">Home</a> ><
+<a href="http://code.google.com/p/wowmodelviewer/wiki/ToDo">To Do</a> ><
+<a href="http://code.google.com/p/wowmodelviewer/wiki/Changelog">Changelog</a> >
 = Introduction =
 The WoW Model Viewer is a stand-alone program that reads the data filesthat are included with the game, "World of Warcraft".  This program allows you to view models from the game, and does its best to try and replicate and emulate the models to look just as they would in-game.  What this program does NOT do, is allow you to "import" the characters you design into the game.  That is not what this program is about. This program does not interact with the game at all apart from reading in the data files.  If you are looking for a way to "model change", then this is not the program for you.
 
 The program allows you to view characters and to equip them with items, also allowing you to see them performing animations, can view any creature that exists within the game using any of their various textures, as well as seeing some of the underlaying detail such as their skeletal system. Support was also added for being able to customise the lighting conditions in an attempt to allow the users, imparticularly machinima makers to improve the lighting conditions to help blend the models with background scenes. 
 
 -http://www.wowmodelviewer.org/
-
-= Pages =
-1. Home<p>
-2. <a href="http://www.code.google.com/p/wowmodelviewer/wiki/ToDo">ToDo</a><p>
-3. <a href="http://www.code.google.com/p/wowmodelviewer/wiki/Changelog">Changelog</a>
