--- a/trunk/src/po/frFR.po
+++ b/trunk/src/po/frFR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-15 23:24+0800\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Chuanhsing <chuanhsing@gmail.com>\n"
+"Last-Translator: MadSquirrel <madsquirrel.choplegob@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -231,9 +231,8 @@ msgstr "Charger équipment"
 
 #: charcontrol.cpp:2003
 #: charcontrol.cpp:2005
-#, fuzzy
 msgid "Choose an item"
-msgstr "Choisir un set d'objets"
+msgstr "Choisir un objets"
 
 #: charcontrol.cpp:2077
 msgid "Choose an item set"
@@ -245,23 +244,21 @@ msgstr "Sets d'objets"
 
 #: charcontrol.cpp:2136
 msgid "Known ridable models"
-msgstr ""
+msgstr "Montures connues"
 
 #: charcontrol.cpp:2137
 msgid "Other models"
-msgstr ""
+msgstr "Autres modèles"
 
 #: charcontrol.cpp:2179
 #: charcontrol.cpp:2180
-#, fuzzy
 msgid "Choose a mount"
-msgstr "Monture"
+msgstr "Choisir une monture"
 
 #: charcontrol.cpp:2179
 #: charcontrol.cpp:2180
-#, fuzzy
 msgid "Creatures"
-msgstr "Texture"
+msgstr "Créatures"
 
 #: effects.cpp:89
 #: effects.cpp:91
@@ -362,11 +359,11 @@ msgstr "Nom:"
 
 #: modelbankcontrol.cpp:42
 msgid "Remove"
-msgstr ""
+msgstr "Supprimer"
 
 #: modelbankcontrol.cpp:43
 msgid "Display"
-msgstr ""
+msgstr "Afficher"
 
 #  "Point de vue" ?
 #: modelcontrol.cpp:52
@@ -692,7 +689,7 @@ msgstr "Texture de PNJ"
 
 #: modelviewer.cpp:373
 msgid "Always show default doodads in WMOs"
-msgstr ""
+msgstr "Equipement par defaut dans les WMOs"
 
 #  Il y a déja un "options" plus loin. Je ne pense pas que ca dérange. Sinon, comment traduire celui-ci ? Préférences ? Réglages ?
 #: modelviewer.cpp:376
@@ -810,42 +807,40 @@ msgstr "Flèches"
 
 #  Il y a déja un "options" plus loin. Je ne pense pas que ca dérange. Sinon, comment traduire celui-ci ? Préférences ? Réglages ?
 #: settings.cpp:38
-#, fuzzy
 msgid "Settings_Page1"
 msgstr "Options"
 
 #: settings.cpp:43
-#, fuzzy
 msgid "Show Particle"
 msgstr "Particules"
 
 #: settings.cpp:44
 msgid "Use Local Files"
-msgstr ""
+msgstr "Fichiers locaux"
 
 #: settings.cpp:45
 msgid "Random Skins"
-msgstr ""
+msgstr "Caractéristiques aléatoires"
 
 #: settings.cpp:46
 msgid "Hide Helmet"
-msgstr ""
+msgstr "Cacher casque"
 
 #: settings.cpp:47
 msgid "Eye Glow"
-msgstr ""
+msgstr "Yeux luisant"
 
 #: settings.cpp:53
 msgid "MPQ Archives order and files to load"
-msgstr ""
+msgstr "Ordre de chargement des fichiers MPQ"
 
 #: settings.cpp:55
 msgid "Move Up"
-msgstr ""
+msgstr "Haut"
 
 #: settings.cpp:56
 msgid "Move Down"
-msgstr ""
+msgstr "Bas"
 
 #: settings.cpp:186
 msgid "Apply Settings"
