--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -7,6 +7,10 @@
 = Current Version =
 World of Warcraft Model Viewer v0.5.08 (Chuanhsing Update)
 
+r666
+
+ - Fixed WMO Export functions
+
 r663
 
  -Lightwave Scenes should read falloff data from WMO's lights and set up the light accordingly. (Don't know of a WMO with Light falloff settings, so I haven't tested it...);
