--- a/trunk/src/ChangeLog.txt
+++ b/trunk/src/ChangeLog.txt
@@ -1,5 +1,8 @@
 World of Warcraft Model Viewer v0.5.08 (Chuanhsing Update)
 
+r672
+- Added new function: "View Item" in main menu
+
 r667
 -Exported Lightwave Scene files now contain Doodad Placement nulls, parented to DoodadSet nulls.
 -Lights attached to Doodads will now export to the Lightwave Scene file
