Edited wiki page through web user interface.

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -7,6 +7,12 @@
 = Current Version =
 World of Warcraft Model Viewer v0.5.08 (Chuanhsing Update)
 
+r672
+
+  - New Exporter Menu by Kjasi
+
+  - Added new function: "View Item" in main menu by Chuanhsing
+
 r667
   -Exported Lightwave Scene files now contain Doodad Placement nulls, parented to DoodadSet nulls.
 
