--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -1,7 +1,7 @@
 #summary WoW Model Viewer Project.
 < <a href="http://code.google.com/p/wowmodelviewer/wiki/Home">Home</a> ><
 <a href="http://code.google.com/p/wowmodelviewer/wiki/ToDo">To Do</a> ><
-<a href="http://code.google.com/p/wowmodelviewer/wiki/Changelog">Changelog</a> >
+<a target="_blank" href="http://wowmodelviewer.googlecode.com/svn/trunk/src/ChangeLog.txt">Changelog</a> >
 = Introduction =
 The WoW Model Viewer is a stand-alone program that reads the data filesthat are included with the game, "World of Warcraft".  This program allows you to view models from the game, and does its best to try and replicate and emulate the models to look just as they would in-game.  What this program does NOT do, is allow you to "import" the characters you design into the game.  That is not what this program is about. This program does not interact with the game at all apart from reading in the data files.  If you are looking for a way to "model change", then this is not the program for you.
 
