--- a/wiki/MacOSXCompilation.wiki
+++ b/wiki/MacOSXCompilation.wiki
@@ -27,6 +27,7 @@ $ sudo su
 $ fink install libpng3-shlibs
 $ fink install libjpeg-shlibs
 $ fink install wxmac28-shlibs
+$ fink install glew-shlibs
 }}}
 
 After you're done, open the CMake application. Set the *Source* code directory to "src" in your checkout directory, and the *Build* directory to "build". Then proceed with *Configure*. If all fields contain a valid directory for libraries and headers, *Configure* again and then click *Generate*.
