Severely updated GoogleCode Wiki.

--- a/wiki/MacOSXCompilation.wiki
+++ b/wiki/MacOSXCompilation.wiki
@@ -1,5 +1,12 @@
 #summary Describes how to compile WOWMV on OSX.
 
+< <a href="http://code.google.com/p/wowmodelviewer/wiki/Home">Home</a> ><
+<a href="http://code.google.com/p/wowmodelviewer/wiki/ToDo">To Do</a> ><
+<a href="http://code.google.com/p/wowmodelviewer/wiki/Exporting">Model Exporting</a> ><
+<a target="_blank" href="http://wowmodelviewer.googlecode.com/svn/trunk/doc/buildnotes.txt">Build Notes</a> ><
+<a target="_blank" href="http://wowmodelviewer.googlecode.com/svn/trunk/doc/ChangeLog.txt">Changelog</a> >
+
+[http://i43.tinypic.com/25zh65e.jpg]
 = Introduction =
 
 This page describes how to compile WOWMV on your Mac. It is assumed that you have the [http://developer.apple.com/tools/ Apple Development Tools] already installed.
@@ -12,7 +19,7 @@ With these tools ready, let's install the necessary libraries first.
 
 = Before we can start =
 
-First of all, [http://code.google.com/p/wowmodelviewer/source/checkout check out the source code here].
+First of all, [http://code.google.com/p/wowmodelviewer/source/checkout checkout (download) the source code here].
 
 Open up your Terminal application and install wxWidgets, Glew, as well as the PNG and JPEG libraries. You can identify the exact string (in this example for PNG) by typing
 
@@ -29,6 +36,17 @@ $ fink install libjpeg-shlibs
 $ fink install wxmac28-shlibs
 $ fink install glew-shlibs
 }}}
+
+If fink can't find one or more of the libraries listed above, you'll need to update fink. Running the following commands should help:
+
+{{{
+$ fink selfupdate
+$ fink selfupdate-rsync
+$ fink index -f
+$ fink selfupdate
+}}}
+
+You should now be able to install the missing libraries.
 
 After you're done, open the CMake application. Set the *Source* code directory to "src" in your checkout directory, and the *Build* directory to "build". Then proceed with *Configure*. If all fields contain a valid directory for libraries and headers, *Configure* again and then click *Generate*.
 
