--- a/wiki/LinuxCompilation.wiki
+++ b/wiki/LinuxCompilation.wiki
@@ -1,16 +1,17 @@
-#summary One-sentence summary of this page.
+#summary Describes how to compile WoW Model Viewer on Linux.
 
+< <a href="http://code.google.com/p/wowmodelviewer/wiki/Home">Home</a> ><
+<a href="http://code.google.com/p/wowmodelviewer/wiki/ToDo">To Do</a> ><
+<a href="http://code.google.com/p/wowmodelviewer/wiki/Exporting">Model Exporting</a> ><
+<a target="_blank" href="http://wowmodelviewer.googlecode.com/svn/trunk/doc/buildnotes.txt">Build Notes</a> ><
+<a target="_blank" href="http://wowmodelviewer.googlecode.com/svn/trunk/doc/ChangeLog.txt">Changelog</a> >
+
+[http://i43.tinypic.com/25zh65e.jpg]
 = Introduction =
 
+{{{
 apt-get install cmake
 apt-get install libwxbase2.8-dev
 apt-get install g++-4.3
 apt-get install make
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+}}}
