--- a/wiki/LinuxCompilation.wiki
+++ b/wiki/LinuxCompilation.wiki
@@ -11,7 +11,19 @@
 
 {{{
 apt-get install cmake
-apt-get install libwxbase2.8-dev
-apt-get install g++-4.3
+apt-get install g++
 apt-get install make
+apt-get install libwxbase2.8-dev
+apt-get install libjpeg62-dev
+apt-get install libpng12-dev
+apt-get install libglew1.5-dev
+apt-get install libbz2-dev
+
+svn checkout http://wowmodelviewer.googlecode.com/svn/trunk/ wowmodelviewer-read-only
+cd wowmodelviewer-read-only
+cmake .
+-- Configuring done
+-- Generating done
+-- Build files have been written to: /home/xp/wmv/src
+
 }}}
